# passwdgen

./: .travis.yml  CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  wordlist-new.txt
passwdgen/: __init__.py  __main__.py  cmdline.py  constants.py  generator.py  utils.py
passwdgen/data/: default-word-list.txt
tests/: test_password_generation.py  test_permutations.py  test_secure_rng.py
