[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "passwdgen"
version = "0.3.1"
description = "A password generation utility"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name="Thane Thomson", email="connect@thanethomson.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities",
]
dependencies = [
    "pyperclip >= 1.8.2"
]

[project.urls]
"Homepage" = "https://github.com/thanethomson/passwdgen"

[project.scripts]
passwdgen = "passwdgen.cmdline:main"
